--- a/index.html
+++ b/index.html
@@ -60,25 +60,30 @@
             <h2>Servicios Estratégicos</h2>
             <div class="services-grid">
                 <div class="service-card">
+                    <div class="icon"><i class="fas fa-robot"></i></div>
                     <h3>Customer Intelligence Automation</h3>
                     <p>Chatbots con IA (Botmaker + GPT) que venden, califican leads y atienden 24/7 por WhatsApp, Instagram y web.</p>
                     <p><strong>+67% en ventas</strong> por optimización de leads</p>
                 </div>
                 <div class="service-card">
+                    <div class="icon"><i class="fab fa-instagram"></i></div>
                     <h3>Digital Presence Optimization</h3>
                     <p>Gestión estratégica de redes sociales con contenido inteligente y respuestas automáticas.</p>
                     <p><strong>+35% en ventas</strong> por redes sociales</p>
                 </div>
                 <div class="service-card">
+                    <div class="icon"><i class="fas fa-cogs"></i></div>
                     <h3>Operational Efficiency & Process Intelligence</h3>
                     <p>Automatización con RPA, BPM y CRM para liberar recursos y reducir costos operativos.</p>
                     <p><strong>-25% en costos</strong> operativos</p>
                 </div>
                 <div class="service-card">
+                    <div class="icon"><i class="fas fa-industry"></i></div>
                     <h3>Digital Transformation & 4.0 Certification</h3>
                     <p>Diagnóstico, estrategia y certificación con estándar <strong>CERTIMIND.org</strong> para validar tu madurez digital.</p>
                 </div>
                 <div class="service-card">
+                    <div class="icon"><i class="fas fa-chalkboard-teacher"></i></div>
                     <h3>AI & Digital Skills Training</h3>
                     <p>Capacitamos a tu equipo para que aprovechen al máximo las nuevas tecnologías.</p>
                 </div>
@@ -150,5 +155,4 @@
     </footer>
 
 </body>
-</html>
 </html>
