--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <img src="assets/tecnologias/certimind.png" alt="CERTIMIND">
                 <img src="assets/tecnologias/whatsapp.png" alt="WhatsApp Business">
                 <img src="assets/tecnologias/gpt.png" alt="GPT">
-                <img src="assets/tecnologias/uipath.png" alt="UiPath">
+                <img src="assets/tecnologias/redhat.png" alt="Red Hat">
             </div>
         </div>
     </section>
@@ -155,4 +155,5 @@
     </footer>
 
 </body>
+
 </html>
