--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="service-card">
                     <div class="icon"><i class="fas fa-cogs"></i></div>
                     <h3>Operational Efficiency & Process Intelligence</h3>
-                    <p>Automatización con <strong>Red Hat Ansible, RPA, BPM y CRM para liberar recursos y reducir costos operativos.</p>
+                    <p>Automatización con Red Hat Ansible, RPA, BPM y CRM para liberar recursos y reducir costos operativos.</p>
                     <p><strong>-25% en costos</strong> operativos</p>
                 </div>
                 <div class="service-card">
@@ -157,4 +157,5 @@
 </body>
 
 </html>
+
 
