--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
 </head>
 <body>
 
-    <!-- Hero Section -->
-    <header class="hero">
-        <div class="overlay"></div>
+    <!-- Hero Section con Video -->
+    <header class="hero-video-header">
+        <div class="video-overlay"></div>
+        <video autoplay muted loop class="header-video" playsinline>
+            <source src="assets/videos/ciudad-digital.mp4" type="video/mp4">
+            <!-- Fallback si el video no carga -->
+            <img src="assets/banner.jpg" alt="Digital Profit Advisors" class="hero-fallback">
+        </video>
         <div class="hero-content">
             <img src="assets/logo.png" alt="Digital Profit Advisors" class="logo"/>
             <h1>Transforma tu negocio con Inteligencia Artificial aplicada.</h1>
@@ -74,7 +79,7 @@
                 <div class="service-card">
                     <div class="icon"><i class="fas fa-cogs"></i></div>
                     <h3>Operational Efficiency & Process Intelligence</h3>
-                    <p>Automatización con Red Hat Ansible, RPA, BPM y CRM para liberar recursos y reducir costos operativos.</p>
+                    <p>Automatización con <strong>Red Hat Ansible</strong>, BPM y CRM para liberar recursos y reducir costos operativos.</p>
                     <p><strong>-25% en costos</strong> operativos</p>
                 </div>
                 <div class="service-card">
@@ -154,8 +159,8 @@
         <p>&copy; 2025 Digital Profit Advisors. Todos los derechos reservados.</p>
     </footer>
 
+    <!-- Script -->
+    <script src="script.js"></script>
+
 </body>
-
 </html>
-
-
