--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <!-- Hero Section con Video -->
+    <!-- Hero Section con Video y Contenido Bien Acomodado -->
     <header class="hero-video-header">
         <div class="video-overlay"></div>
         <video autoplay muted loop class="header-video" playsinline>
@@ -18,12 +18,16 @@
             <!-- Fallback si el video no carga -->
             <img src="assets/banner.jpg" alt="Digital Profit Advisors" class="hero-fallback">
         </video>
-        <div class="hero-content">
+
+        <!-- Contenido centrado encima del video -->
+        <div class="hero-content-centered">
             <img src="assets/logo.png" alt="Digital Profit Advisors" class="logo"/>
             <h1>Transforma tu negocio con Inteligencia Artificial aplicada.</h1>
             <p>Chatbots, automatización y certificación 4.0 para aumentar tus ganancias, optimizar operaciones y escalar tu atención al cliente.</p>
             <a href="#contacto" class="btn-primary">Agenda tu diagnóstico gratuito</a>
         </div>
+
+        <!-- WhatsApp flotante -->
         <div class="whatsapp-float">
             <a href="https://wa.me/50672727250" target="_blank" title="Chat con WhatsApp">
                 <i class="fab fa-whatsapp"></i>
