--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="hero-content-centered">
             <img src="assets/logo.png" alt="Digital Profit Advisors" class="logo"/>
             <h1>Transforma tu negocio con Inteligencia Artificial aplicada.</h1>
-            <p>Chatbots, automatización y certificación 4.0 para aumentar tus ganancias, optimizar operaciones y escalar tu atención al cliente.</p>
+            <p>Chatbots, automatización y certificación 4.0 para aumentar tus ganancias, optimizar operaciones y escalar tu atención al cliente</p>
             <a href="#contacto" class="btn-primary">Agenda tu diagnóstico gratuito</a>
         </div>
 
@@ -57,7 +57,7 @@
     <section id="nosotros" class="section">
         <div class="container">
             <h2>Quiénes Somos</h2>
-            <p><strong>Digital Profit Advisors</strong> es una consultora estratégica en transformación digital con presencia en <strong>Costa Rica, Centroamérica, México y Miami</strong>.</p>
+            <p><strong>Digital Profit Advisors</strong> es una consultora estratégica en transformación digital con presencia en <strong>Costa Rica, Centroamérica, Panamá, México y Miami</strong>.</p>
             <p>Nos especializamos en aplicar <strong>Inteligencia Artificial</strong> a problemas reales de negocio: aumentar ventas, reducir costos y mejorar la experiencia del cliente.</p>
             <p>Trabajamos con empresas que no solo quieren tecnología, sino <strong>resultados medibles</strong>.</p>
         </div>
@@ -168,3 +168,4 @@
 
 </body>
 </html>
+
