--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <div class="hero-content-centered">
             <img src="assets/logo.png" alt="Digital Profit Advisors" class="logo"/>
             <h1>Transforma tu negocio con Inteligencia Artificial aplicada.</h1>
-            <p>Chatbots, automatización y certificación 4.0 para aumentar tus ganancias, optimizar operaciones y escalar tu atención al cliente</p>
+            <p>Chatbots, automatización y certificación 4.0 para aumentar tus ganancias, optimizar operaciones y escalar tu atención al cliente.</p>
             <a href="#contacto" class="btn-primary">Agenda tu diagnóstico gratuito</a>
         </div>
-
+        
         <!-- WhatsApp flotante -->
         <div class="whatsapp-float">
             <a href="https://wa.me/50672727250" target="_blank" title="Chat con WhatsApp">
@@ -168,4 +168,5 @@
 
 </body>
 </html>
+
 
