--- a/index.html
+++ b/index.html
@@ -10,49 +10,47 @@
 </head>
 <body>
 
-    <!-- Hero Section con Video y Contenido Bien Acomodado -->
-    <header class="hero-video-header">
-        <div class="video-overlay"></div>
-        <video autoplay muted loop class="header-video" playsinline>
-            <source src="assets/videos/ciudad-digital.mp4" type="video/mp4">
-            <!-- Fallback si el video no carga -->
-            <img src="assets/banner.jpg" alt="Digital Profit Advisors" class="hero-fallback">
-        </video>
+    <!-- Hero Section con Video (sin logo) -->
+<header class="hero-video-header">
+    <div class="video-overlay"></div>
+    <video autoplay muted loop class="header-video" playsinline>
+        <source src="assets/videos/ciudad-digital.mp4" type="video/mp4">
+        <!-- Fallback si el video no carga -->
+        <img src="assets/banner.jpg" alt="Digital Profit Advisors" class="hero-fallback">
+    </video>
 
-        <!-- Contenido centrado encima del video -->
-        <div class="hero-content-centered">
-            <img src="assets/logo.png" alt="Digital Profit Advisors" class="logo"/>
-            <h1>Transforma tu negocio con Inteligencia Artificial aplicada.</h1>
-            <p>Chatbots, automatización y certificación 4.0 para aumentar tus ganancias, optimizar operaciones y escalar tu atención al cliente.</p>
-            <a href="#contacto" class="btn-primary">Agenda tu diagnóstico gratuito</a>
+    <!-- Contenido centrado encima del video (sin logo) -->
+    <div class="hero-content-centered">
+        <h1>Transforma tu negocio con Inteligencia Artificial aplicada.</h1>
+        <p>Chatbots, automatización y certificación 4.0 para aumentar tus ganancias, optimizar operaciones y escalar tu atención al cliente.</p>
+        <a href="#contacto" class="btn-primary">Agenda tu diagnóstico gratuito</a>
+    </div>
+
+    <!-- WhatsApp flotante -->
+    <div class="whatsapp-float">
+        <a href="https://wa.me/50672727250" target="_blank" title="Chat con WhatsApp">
+            <i class="fab fa-whatsapp"></i>
+        </a>
+    </div>
+</header>
+
+<!-- Navbar Compacto -->
+<nav class="navbar">
+    <div class="nav-container">
+        <img src="assets/logo.png" alt="Logo" class="nav-logo" />
+        <ul class="nav-menu">
+            <li><a href="#nosotros">Quiénes Somos</a></li>
+            <li><a href="#servicios">Servicios</a></li>
+            <li><a href="#metodologia">Metodología</a></li>
+            <li><a href="#resultados">Resultados</a></li>
+            <li><a href="#tecnologias">Tecnologías</a></li>
+            <li><a href="#contacto">Contacto</a></li>
+        </ul>
+        <div class="language-switch">
+            <a href="index-en.html" class="lang-en">EN</a>
         </div>
-
-        <!-- WhatsApp flotante -->
-        <div class="whatsapp-float">
-            <a href="https://wa.me/50672727250" target="_blank" title="Chat con WhatsApp">
-                <i class="fab fa-whatsapp"></i>
-            </a>
-        </div>
-    </header>
-
-    <!-- Menú de Navegación -->
-    <nav class="navbar">
-        <div class="nav-container">
-            <img src="assets/logo.png" alt="Logo" class="nav-logo" />
-            <ul class="nav-menu">
-                <li><a href="#nosotros">Quiénes Somos</a></li>
-                <li><a href="#servicios">Servicios</a></li>
-                <li><a href="#metodologia">Metodología</a></li>
-                <li><a href="#resultados">Resultados</a></li>
-                <li><a href="#tecnologias">Tecnologías</a></li>
-                <li><a href="#contacto">Contacto</a></li>
-            </ul>
-            <div class="language-switch">
-                <a href="index-en.html" class="lang-en">EN</a>
-            </div>
-        </div>
-    </nav>
-
+    </div>
+</nav>
     <!-- Sección: Quiénes Somos -->
     <section id="nosotros" class="section">
         <div class="container">
@@ -168,3 +166,4 @@
 
 </body>
 </html>
+
