--- a/index.html
+++ b/index.html
@@ -46,9 +46,11 @@
             <li><a href="#tecnologias">Tecnologías</a></li>
             <li><a href="#contacto">Contacto</a></li>
         </ul>
-        <div class="language-switch">
-            <a href="index-en.html" class="lang-en">EN</a>
-        </div>
+       <div class="nav-actions">
+    <a href="index-en.html" class="lang-en">EN</a>
+    <a href="#contacto" class="btn-nav-contact">Contacto</a>
+</div>
+
     </div>
 </nav>
     <!-- Sección: Quiénes Somos -->
@@ -166,4 +168,5 @@
 
 </body>
 </html>
+
 
