--- a/index.html
+++ b/index.html
@@ -11,48 +11,48 @@
 <body>
 
     <!-- Hero Section con Video (sin logo) -->
-<header class="hero-video-header">
-    <div class="video-overlay"></div>
-    <video autoplay muted loop class="header-video" playsinline>
-        <source src="assets/videos/ciudad-digital.mp4" type="video/mp4">
-        <!-- Fallback si el video no carga -->
-        <img src="assets/banner.jpg" alt="Digital Profit Advisors" class="hero-fallback">
-    </video>
+    <header class="hero-video-header">
+        <div class="video-overlay"></div>
+        <video autoplay muted loop class="header-video" playsinline>
+            <source src="assets/videos/ciudad-digital.mp4" type="video/mp4">
+            <!-- Fallback si el video no carga -->
+            <img src="assets/banner.jpg" alt="Digital Profit Advisors" class="hero-fallback">
+        </video>
 
-    <!-- Contenido centrado encima del video (sin logo) -->
-    <div class="hero-content-centered">
-        <h1>Transforma tu negocio con Inteligencia Artificial aplicada.</h1>
-        <p>Chatbots, automatización y certificación 4.0 para aumentar tus ganancias, optimizar operaciones y escalar tu atención al cliente.</p>
-        <a href="#contacto" class="btn-primary">Agenda tu diagnóstico gratuito</a>
-    </div>
+        <!-- Contenido centrado encima del video -->
+        <div class="hero-content-centered">
+            <h1>Transforma tu negocio con Inteligencia Artificial aplicada.</h1>
+            <p>Chatbots, automatización y certificación 4.0 para aumentar tus ganancias, optimizar operaciones y escalar tu atención al cliente.</p>
+            <a href="#contacto" class="btn-primary">Agenda tu diagnóstico gratuito</a>
+        </div>
 
-    <!-- WhatsApp flotante -->
-    <div class="whatsapp-float">
-        <a href="https://wa.me/50672727250" target="_blank" title="Chat con WhatsApp">
-            <i class="fab fa-whatsapp"></i>
-        </a>
-    </div>
-</header>
+        <!-- WhatsApp flotante -->
+        <div class="whatsapp-float">
+            <a href="https://wa.me/50672727250" target="_blank" title="Chat con WhatsApp">
+                <i class="fab fa-whatsapp"></i>
+            </a>
+        </div>
+    </header>
 
-<!-- Navbar Compacto -->
-<nav class="navbar">
-    <div class="nav-container">
-        <img src="assets/logo.png" alt="Logo" class="nav-logo" />
-        <ul class="nav-menu">
-            <li><a href="#nosotros">Quiénes Somos</a></li>
-            <li><a href="#servicios">Servicios</a></li>
-            <li><a href="#metodologia">Metodología</a></li>
-            <li><a href="#resultados">Resultados</a></li>
-            <li><a href="#tecnologias">Tecnologías</a></li>
-            <li><a href="#contacto">Contacto</a></li>
-        </ul>
-       <div class="nav-actions">
-    <a href="index-en.html" class="lang-en">EN</a>
-    <a href="#contacto" class="btn-nav-contact">Contacto</a>
-</div>
+    <!-- Navbar Compacto -->
+    <nav class="navbar">
+        <div class="nav-container">
+            <img src="assets/logo.png" alt="Logo" class="nav-logo" />
+            <ul class="nav-menu">
+                <li><a href="#nosotros">Quiénes Somos</a></li>
+                <li><a href="#servicios">Servicios</a></li>
+                <li><a href="#metodologia">Metodología</a></li>
+                <li><a href="#resultados">Resultados</a></li>
+                <li><a href="#tecnologias">Tecnologías</a></li>
+                <li><a href="#contacto">Contacto</a></li>
+            </ul>
+            <div class="nav-actions">
+                <a href="index-en.html" class="lang-en">EN</a>
+                <a href="#contacto" class="btn-nav-contact">Contacto</a>
+            </div>
+        </div>
+    </nav>
 
-    </div>
-</nav>
     <!-- Sección: Quiénes Somos -->
     <section id="nosotros" class="section">
         <div class="container">
@@ -104,12 +104,36 @@
     <section id="metodologia" class="section">
         <div class="container">
             <h2>Nuestra Metodología: AI-Driven Growth Path®</h2>
-            <div class="methodology-steps">
-                <div class="step"><strong>1. Diagnóstico</strong><br>Evaluamos tu madurez digital</div>
-                <div class="step"><strong>2. Estrategia</strong><br>Diseñamos tu hoja de ruta</div>
-                <div class="step"><strong>3. Implementación</strong><br>Automatizamos y capacitamos</div>
-                <div class="step"><strong>4. Medición</strong><br>Reportamos resultados reales</div>
-                <div class="step"><strong>5. Optimización</strong><br>Mejoramos continuamente</div>
+            <div class="methodology-path">
+                <div class="step">
+                    <div class="step-icon">1</div>
+                    <h3>Diagnóstico</h3>
+                    <p>Evaluamos tu madurez digital</p>
+                </div>
+                <div class="arrow">→</div>
+                <div class="step">
+                    <div class="step-icon">2</div>
+                    <h3>Estrategia</h3>
+                    <p>Diseñamos tu hoja de ruta</p>
+                </div>
+                <div class="arrow">→</div>
+                <div class="step">
+                    <div class="step-icon">3</div>
+                    <h3>Implementación</h3>
+                    <p>Automatizamos y capacitamos</p>
+                </div>
+                <div class="arrow">→</div>
+                <div class="step">
+                    <div class="step-icon">4</div>
+                    <h3>Medición</h3>
+                    <p>Reportamos resultados reales</p>
+                </div>
+                <div class="arrow">→</div>
+                <div class="step">
+                    <div class="step-icon">5</div>
+                    <h3>Optimización</h3>
+                    <p>Mejoramos continuamente</p>
+                </div>
             </div>
         </div>
     </section>
@@ -118,55 +142,18 @@
     <section id="resultados" class="section" style="background: #1a0000; color: #fff;">
         <div class="container">
             <h2>Resultados Reales</h2>
-            <p>Empresas que han implementado nuestras soluciones reportan:</p>
-            <ul class="results-list">
-                <li>✅ <strong>+67%</strong> en ventas por chatbots con IA</li>
-                <li>✅ <strong>+35%</strong> en ventas por redes sociales</li>
-                <li>✅ <strong>-25%</strong> en costos operativos</li>
-                <li>✅ <strong>Atención 24/7</strong> sin equipo adicional</li>
-                <li>✅ <strong>Libertad</strong> para enfocarse en lo estratégico</li>
-            </ul>
-        </div>
-    </section>
-
-    <!-- Sección: Tecnologías -->
-    <section id="tecnologias" class="section">
-        <div class="container">
-            <h2>Tecnologías que Dominamos</h2>
-            <p>Trabajamos con las plataformas líderes en automatización y experiencia del cliente:</p>
-            <div class="logos-tech">
-                <img src="assets/tecnologias/botmaker.png" alt="Botmaker">
-                <img src="assets/tecnologias/certimind.png" alt="CERTIMIND">
-                <img src="assets/tecnologias/whatsapp.png" alt="WhatsApp Business">
-                <img src="assets/tecnologias/gpt.png" alt="GPT">
-                <img src="assets/tecnologias/redhat.png" alt="Red Hat">
-            </div>
-        </div>
-    </section>
-
-    <!-- Sección: Contacto -->
-    <section id="contacto" class="section" style="background: #000; text-align: center; padding: 100px 20px;">
-        <div class="container">
-            <h2>¿Listo para transformar tu negocio?</h2>
-            <p>Agenda tu diagnóstico gratuito de madurez digital e IA.</p>
-            <p><strong>Teléfono:</strong> +506 7272 7250</p>
-            <p><strong>Correo:</strong> <a href="mailto:digital.profit.llc@gmail.com">digital.profit.llc@gmail.com</a></p>
-            <a href="https://wa.me/50672727250" class="btn-primary" target="_blank">Escríbenos por WhatsApp</a>
-            <p style="margin-top: 30px; font-size: 0.9rem; color: #aaa;">
-                Atendemos en Costa Rica, Centroamérica, México y Miami.
-            </p>
-        </div>
-    </section>
-
-    <!-- Footer -->
-    <footer style="background: #111; color: #777; text-align: center; padding: 20px;">
-        <p>&copy; 2025 Digital Profit Advisors. Todos los derechos reservados.</p>
-    </footer>
-
-    <!-- Script -->
-    <script src="script.js"></script>
-
-</body>
-</html>
-
-
+            <p style="font-size: 1.2rem; margin-bottom: 30px;">Empresas que han implementado nuestras soluciones reportan:</p>
+            <div class="results-grid">
+                <div class="result-item">
+                    <div class="result-icon">✅</div>
+                    <strong>+67%</strong> en ventas por chatbots con IA
+                </div>
+                <div class="result-item">
+                    <div class="result-icon">✅</div>
+                    <strong>+35%</strong> en ventas por redes sociales
+                </div>
+                <div class="result-item">
+                    <div class="result-icon">✅</div>
+                    <strong>-25%</strong> en costos operativos
+                </div>
+                <div class="
