--- a/index.html
+++ b/index.html
@@ -156,4 +156,54 @@
                     <div class="result-icon">✅</div>
                     <strong>-25%</strong> en costos operativos
                 </div>
-                <div class="
+                <div class="result-item">
+                    <div class="result-icon">✅</div>
+                    <strong>Atención 24/7</strong> sin equipo adicional
+                </div>
+                <div class="result-item">
+                    <div class="result-icon">✅</div>
+                    <strong>Libertad</strong> para enfocarse en lo estratégico
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Sección: Tecnologías -->
+    <section id="tecnologias" class="section">
+        <div class="container">
+            <h2>Tecnologías que Dominamos</h2>
+            <p>Trabajamos con las plataformas líderes en automatización y experiencia del cliente:</p>
+            <div class="logos-tech">
+                <img src="assets/tecnologias/botmaker.png" alt="Botmaker">
+                <img src="assets/tecnologias/certimind.png" alt="CERTIMIND">
+                <img src="assets/tecnologias/whatsapp.png" alt="WhatsApp Business">
+                <img src="assets/tecnologias/gpt.png" alt="GPT">
+                <img src="assets/tecnologias/redhat.png" alt="Red Hat">
+            </div>
+        </div>
+    </section>
+
+    <!-- Sección: Contacto -->
+    <section id="contacto" class="section" style="background: #000; text-align: center; padding: 100px 20px;">
+        <div class="container">
+            <h2>¿Listo para transformar tu negocio?</h2>
+            <p>Agenda tu diagnóstico gratuito de madurez digital e IA.</p>
+            <p><strong>Teléfono:</strong> +506 7272 7250</p>
+            <p><strong>Correo:</strong> <a href="mailto:digital.profit.llc@gmail.com">digital.profit.llc@gmail.com</a></p>
+            <a href="https://wa.me/50672727250" class="btn-primary" target="_blank">Escríbenos por WhatsApp</a>
+            <p style="margin-top: 30px; font-size: 0.9rem; color: #aaa;">
+                Atendemos en Costa Rica, Centroamérica, México y Miami.
+            </p>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer style="background: #111; color: #777; text-align: center; padding: 20px;">
+        <p>&copy; 2025 Digital Profit Advisors. Todos los derechos reservados.</p>
+    </footer>
+
+    <!-- Script -->
+    <script src="script.js"></script>
+
+</body>
+</html>
