--- a/index.html
+++ b/index.html
@@ -44,10 +44,15 @@
                 <li><a href="#metodologia">Metodología</a></li>
                 <li><a href="#resultados">Resultados</a></li>
                 <li><a href="#tecnologias">Tecnologías</a></li>
-             </ul>
+            </ul>
             <div class="nav-actions">
-                <a href="index-en.html" class="lang-en">EN</a>
-                <a href="#contacto" class="btn-nav-contact">Contacto</a>
+                <!-- Botón rojo de Contáctenos -->
+                <a href="#contacto" class="btn-nav-contact">Contáctenos</a>
+
+                <!-- Idioma con ícono de mundo -->
+                <a href="index-en.html" class="lang-switch" title="Cambiar idioma">
+                    <i class="fas fa-globe-americas"></i> Language
+                </a>
             </div>
         </div>
     </nav>
@@ -206,4 +211,3 @@
 
 </body>
 </html>
-
