--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
                 <!-- Idioma con ícono de mundo -->
                 <a href="index-en.html" class="lang-switch" title="Cambiar idioma">
-                    <i class="fas fa-globe-americas"></i> Language
+                    <i class="fas fa-globe-americas"></i> EN
                 </a>
             </div>
         </div>
@@ -211,3 +211,4 @@
 
 </body>
 </html>
+
