--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <!-- Hero Section con Video (sin logo) -->
+    <!-- Hero Section con Video -->
     <header class="hero-video-header">
         <div class="video-overlay"></div>
         <video autoplay muted loop class="header-video" playsinline>
@@ -51,7 +51,7 @@
 
                 <!-- Idioma con ícono de mundo -->
                 <a href="index-en.html" class="lang-switch" title="Cambiar idioma">
-                    <i class="fas fa-globe-americas"></i> EN
+                    <span style="font-size: 1.2rem; margin-right: 5px;">🌎</span> Language
                 </a>
             </div>
         </div>
@@ -211,4 +211,3 @@
 
 </body>
 </html>
-
