--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
                 <!-- Idioma con ícono de mundo -->
                 <a href="index-en.html" class="lang-switch" title="Cambiar idioma">
-                    <span style="font-size: 1.2rem; margin-right: 5px;">🌎</span> Language
+                    <span style="font-size: 1.2rem; margin-right: 5px;">🌎</span> EN
                 </a>
             </div>
         </div>
@@ -211,3 +211,4 @@
 
 </body>
 </html>
+
