--- a/index-en.html
+++ b/index-en.html
@@ -51,7 +51,7 @@
 
                 <!-- Language switch with globe icon -->
                 <a href="index.html" class="lang-switch" title="Cambiar idioma">
-                    <span style="font-size: 1.2rem; margin-right: 5px;">🌎</span> Language
+                    <span style="font-size: 1.2rem; margin-right: 5px;">🌎</span> ES
                 </a>
             </div>
         </div>
@@ -211,3 +211,4 @@
 
 </body>
 </html>
+
